[package]
name = "make_ast"
version = "0.1.0"
authors = ["Hirokazu MINAMI <hrkzmnm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }
proc-macro2 = "1.0.9"

[lib]
proc-macro = true
doctest = false
